fix: ensure input and foorter areas always stay visible at bottom

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,10 +23,6 @@ body {
   height: 100%;
 }
 
-.bot-response p {
-  padding: 0px 0px 10px 0px;
-}
-
 .space-wrap {
   white-space: pre-wrap; /* CSS property to preserve whitespace */
   font-family: monospace; /* Ensures consistent spacing */
